# PropSight

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_data/: generate_samples.py
src/prop_sight/: __init__.py
src/prop_sight/analytics/: budget.py  chart_summaries.py  common.py  core.py  llm.py  llm_insights.py  report.py  rules.py  segmentation.py  synonyms.py  timeseries.py
src/prop_sight/api/: auth.py  config.py  db.py  main.py  migrate.py  state.py
src/prop_sight/api/routes/: auth_routes.py  pages.py  reports_api.py  sorter_api.py  upload.py
src/prop_sight/api/services/: export_service.py  ingest_service.py  report_service.py  rules_service.py
src/prop_sight/api/static/: app.js  sorter.js  theme.js
src/prop_sight/api/templates/: base.html  dashboard.html  datasets.html  login.html  register.html  reports_list.html  sorter.html  upload.html  users.html
src/prop_sight/ingestion/: dedupe.py  excel_reader.py  merge.py  mojibake.py  normalize.py  notes.py  phone.py  property_type.py  schema_llm.py
